[gd_scene load_steps=15 format=3 uid="uid://blbkhwggjbpq0"]

[ext_resource type="Script" path="res://scripts/Main/buttons.gd" id="1_x5h1j"]
[ext_resource type="PackedScene" uid="uid://bcxdvv4qwwmqm" path="res://scenes/SimonSays/simon_says.tscn" id="2_f7dlu"]
[ext_resource type="PackedScene" uid="uid://c1ov306httsie" path="res://scenes/Snake/snake.tscn" id="3_srr2a"]
[ext_resource type="PackedScene" uid="uid://c1n3bt7ntc5gf" path="res://scenes/Pong/pong.tscn" id="4_mwkxj"]
[ext_resource type="PackedScene" uid="uid://cgu5dun6rgtic" path="res://scenes/Dino/dino.tscn" id="5_id28r"]
[ext_resource type="PackedScene" uid="uid://bjw6sh7j2lsq3" path="res://scenes/Creep/creep.tscn" id="6_1357e"]
[ext_resource type="PackedScene" uid="uid://cj0i3bqn4ap1r" path="res://scenes/Flappy/flappy.tscn" id="7_eg55i"]
[ext_resource type="PackedScene" uid="uid://cf4xkqs74ytur" path="res://scenes/Saucer/saucer.tscn" id="8_ni3d4"]
[ext_resource type="PackedScene" uid="uid://dx4hwtnr40m1r" path="res://scenes/Attack/attack.tscn" id="9_trp7d"]
[ext_resource type="Theme" uid="uid://bj6ltbgw537xh" path="res://themes/Main/button.tres" id="10_85yih"]
[ext_resource type="Theme" uid="uid://cc5frax1el0v6" path="res://themes/Main/line_edit.tres" id="11_h0sww"]
[ext_resource type="Theme" uid="uid://0knrve0pfa03" path="res://themes/Main/label.tres" id="12_fypji"]

[sub_resource type="LabelSettings" id="LabelSettings_v6btp"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mxgc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Buttons" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_x5h1j")
simon_says = ExtResource("2_f7dlu")
snake = ExtResource("3_srr2a")
pong = ExtResource("4_mwkxj")
dino = ExtResource("5_id28r")
creep = ExtResource("6_1357e")
flappy = ExtResource("7_eg55i")
saucer = ExtResource("8_ni3d4")
attack = ExtResource("9_trp7d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
columns = 3

[node name="SimonSays" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Simon Says Game"

[node name="Snake" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Snake"

[node name="Perry" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Pong
"

[node name="Dino" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Dino"

[node name="Creep" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Avoid the Creep"

[node name="Flappy" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Flappy"

[node name="Saucer" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Saucer"

[node name="Attack" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Alien Attack"

[node name="Rodican" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Rodican"

[node name="Initials" type="LineEdit" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("11_h0sww")
alignment = 1
max_length = 3

[node name="InitialsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("12_fypji")
text = "Input Initials:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Highscore_Button" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("10_85yih")
text = "Highscore"

[node name="HighScorePopup" type="Window" parent="GridContainer"]
title = "Highscores"
position = Vector2i(40, 250)
size = Vector2i(640, 512)
visible = false
borderless = true
always_on_top = true

[node name="ColorRect" type="ColorRect" parent="GridContainer/HighScorePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 644.0
offset_bottom = 516.0
color = Color(0.188235, 0.376471, 0.509804, 1)

[node name="HighScoreTitle" type="Label" parent="GridContainer/HighScorePopup"]
visible = false
offset_left = 4.0
offset_top = 4.0
offset_right = 644.0
offset_bottom = 516.0
text = "High Scores:"
label_settings = SubResource("LabelSettings_v6btp")
autowrap_mode = 1

[node name="ItemList" type="ItemList" parent="GridContainer/HighScorePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 644.0
offset_bottom = 516.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_4mxgc")
select_mode = 1
max_text_lines = 20
same_column_width = true

[connection signal="pressed" from="GridContainer/SimonSays" to="." method="_on_simon_says_pressed"]
[connection signal="pressed" from="GridContainer/Snake" to="." method="_on_snake_pressed"]
[connection signal="pressed" from="GridContainer/Perry" to="." method="_on_pong_pressed"]
[connection signal="pressed" from="GridContainer/Dino" to="." method="_on_dino_pressed"]
[connection signal="pressed" from="GridContainer/Creep" to="." method="_on_creep_pressed"]
[connection signal="pressed" from="GridContainer/Flappy" to="." method="_on_flappy_pressed"]
[connection signal="pressed" from="GridContainer/Saucer" to="." method="_on_saucer_pressed"]
[connection signal="pressed" from="GridContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="text_changed" from="GridContainer/Initials" to="." method="_on_initials_text_changed"]
